--- a/rest_api_express_sequelize_sqlite/package.json
+++ b/rest_api_express_sequelize_sqlite/package.json
@@ -10,7 +10,9 @@
   "author": "Thiago Felipe",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
     "sequelize": "^6.20.0",
     "sqlite3": "^5.0.8"
   },
